SubVersion: $Id$

- 18/02/2006, version 2.06:
	- [roms] $1974: lcd/lcd_mem code slightly reworked for clarity
	- [roms] $1976: skin is now scaled directly from JPEG image => no resolution lost

- 07/02/2006, version 2.05:
	- [roms] $1904: fixed bug #1425569 ("Error code not found" when sending 
		file to Voyage200). TiEmu didn't allow sending of a 92+ FLASH app on V200
		due to a too restrictive check.
	- [roms] $1967: request #1430263: "better error handling"
	- [roms] $1970: bug #1388306 fixed: "can't send FLASH app"

- 04/02/2006, version 2.04:
	- [roms] $1897: backported rev. $1812
	- [roms] $1898: backported rev. $1811
	- [roms] $1899: backported rev. $1856

- 26/09/2005, version 2.03:
	- [roms] $1800: fixed #1304338 (doesn't save skinless mode in .ini file)
	- [roms] $1802: fixed #1305054 (doesn't refresh vector bkpt state)

- 20/09/2005, version 2.02:
	- [roms] $1756: fixed V200 skin (LCD is now blanked).
	- [roms] $1788: don't overwrite file received from TiEmu.
		Raises a overwrite/rename/skip box for now (imported TiLP-II file management unit).
	- [roms] $1794: fixed bad memory allocation in the GTK+ 2.6 multiple
	        file selector (bug #1294628). 

- 25/08/2005, version 2.01:
	- [roms] $1689: fixed Titanium skin loading and fixed bug in skin loader
	- [roms] $1692: re-enabled transient mode for windows
	- [roms] $1694: set transient mode as option
	- [kevin] $1714: fix handling of handles (don't interpret NULL as end of heap table, don't
	                 dereference H_NULL in loops)
	- [kevin] $1715: fix size of archived handles under PedroM
	- [kevin] $1743: fix FlashROM writes: can't set bits from 0 to 1
	- [roms]  $1747: don't allow operations on state while the debugger is opened (bug item #1250175).

- 19/08/2005, version 2.00:
	- [kevin] $1662/1663: import V200 updates as HW2, not HW1 (and default TI-89/92+ updates to HW2)
	- [roms] $1666: use Titanium and V200 skins when available (else fallbacks)