@@ -1,2 +1,3 @@
+mkdir c:\msvc\tilp\glade\
 copy *.glade c:\msvc\tilp\glade\
 del *.bak
